[tool.poetry]
name = "kt-taxa"
version = "0.1.0"
description = "Calcula a taxa da venda coberta"
authors = ["Valmir Franca <vfranca3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tx = "kt_taxa.cli:cli"
