[tool.poetry]
name = "kt-taxa"
version = "0.2.0"
description = "Calcula a taxa da venda coberta"
authors = ["Valmir Franca <vfranca3@gmail.com>"]
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/vfranca/kt-taxa"
keywords = ["cli", "trading", "opções", "derivativos", "taxa", "bolsa de valores"]
classifiers = [
"Development Status :: 2 - Pre-Alpha",
"Environment :: Console",
"Intended Audience :: Financial and Insurance Industry",
"License :: OSI Approved :: GNU General Public License (GPL)",
"Natural Language :: Portuguese (Brazilian)",
"Programming Language :: Python :: 3.8",
"Topic :: Adaptive Technologies",
"Topic :: Office/Business :: Financial :: Investment"
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tx = "kt_taxa.cli:cli"
